Sat Feb 23 12:37:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Eric Z. Ayers <eric.ayers@compgen.com>
  * Changes the cursor to a bottom left corner when you start to drag to
    select a grab region.

Thu Jan 11 17:43:19 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Patch from Michael Roberts <m.t.roberts@student.murdoch.edu.au>
        to add -t, --thumb option to generate thumbnails. I modified it a
	little, specify the percentage size of the thumbnail on the
	commandline.

Mon Dec  4 23:46:03 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Adde -m, --multidisp, which is for multiple heads (not xinerama)
	grabs shots from each and joins them together.
	* Fixed doing the string escapes when saving files. My bad.


Sun Nov 12 15:16:40 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Now uses giblib. You'll need the very latest giblib from CVS as
	of right now.

Sun Nov  5 02:17:57 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Beep when about to take the shot.
	* Added -b, --border to grab wm borders too.
	* Ungrab mouse, keyboard before sleeping for --delay.
	* -e 'feh &f' is not intuitive. Can't use '%' cos that's reserved
	for strftime, so now the internal format specifiers are prefixed
	'$'. Trouble is, you now _must_ use '', not "", or the shell will
	interpret the $ sign and perform variable
	substiution. Suggestions?
	* Purged boring debugging shit.

Mon Oct 30 18:54:05 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* I can't be arsed to type all this again, so here's the new
	manpage entrys:
	* If [file] is not specified, a date-stamped file will be
	dropped in the current directory.
	* SPECIAL STRINGS
	Both the --exec and filename parameters  can  take  format
        specifiers  that  are  expanded by scrot when encountered.
        There are two types of format specifier.  Characters  pre-
        ceded  by  a  '%' are interpretted by strftime(2). See man
        strftime for examples.  These options may be used to refer