@@ -2,7 +2,7 @@ dnl Process this file with autoconf to create configure.
 
 AC_INIT
 AC_CONFIG_SRCDIR([src/main.c])
-AM_INIT_AUTOMAKE(scrot, 0.6)
+AM_INIT_AUTOMAKE(scrot, 0.7)
 AM_CONFIG_HEADER(src/config.h)
 
 AC_PROG_CC
@@ -14,7 +14,7 @@ AC_PROG_MAKE_SET
 
 AM_MAINTAINER_MODE
 
-AC_PATH_GENERIC(giblib, 1.2.1, [
+AC_PATH_GENERIC(giblib, 1.2.3, [
   AC_SUBST(GIBLIB_LIBS)
   AC_SUBST(GIBLIB_CFLAGS) ],
   AC_MSG_ERROR(Cannot find giblib: Is giblib-config in the path?) )
