@@ -1,3 +1,7 @@
+Tue Feb 25 13:13:03 GMT 2003  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Update for latest giblib. Requires latest release now.
+
 Sat Feb 23 12:37:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * Patch from Eric Z. Ayers <eric.ayers@compgen.com>
